deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-api
  namespace: rag
  labels:
    app: rag-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-api
  template:
    metadata:
      labels:
        app: rag-api
    spec:
      containers:
        - name: rag-api
          image: local-registry:5000/rag-api:0.1.0
          # workingDir: /app
          # command: [ "python", "main.py"]
          imagePullPolicy: Always
          # imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: rag-dir
              mountPath: /mnt
              # readOnly: true
          # resources:
          #   limits:
          #     cpu: 100m
          #     memory: 128Mi
          #   requests:
          #     cpu: 100m
      volumes:
        - name: rag-dir
          hostPath:
            path: /mnt/host/files
            type: Directory
          # persistentVolumeClaim:
          #   claimName: rag-pvc
