deploy/postgre-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre
  namespace: rag
spec:
  type: ClusterIP
  selector:
    app: postgre-pod
  ports:
    - port: 5432
      targetPort: 5432
      name: tcp
