deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-api
  namespace: rag
  annotations:
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    # nginx.ingress.kubernetes.io/proxy-write-timeout: "60"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  ingressClassName: nginx
  rules:
    - host: rag-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qdrantdb
                port:
                  number: 6333
          - path: /rag-api
            # - path: /rag-api(/|$)(.*)
            # pathType: ImplementationSpecific
            pathType: Prefix
            backend:
              service:
                name: rag-api
                port:
                  number: 8000
          - path: /project
            pathType: Prefix
            backend:
              service:
                name: supabase-studio
                port:
                  number: 5000
